Bug 452739 - Outline drag previews for the rectangle and ellipse tools constantly stutter around from their actual effective position, especially at high zoom levels
Summary: Outline drag previews for the rectangle and ellipse tools constantly stutter ...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 5.0.5
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression
: 453130 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-04-18 16:26 UTC by tomtomtomreportingin
Modified: 2022-06-21 12:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2022-04-18 16:26:33 UTC
SUMMARY
In Krita 5, the outline drag previews for rectangle/ellipse tools and their corresponding selection tools will constantly stutter around into misleading positions as the user drags from one point to another, often resulting in imprecise results.

STEPS TO REPRODUCE
1. Zoom in 800% for easier observance.
2. Select the Elliptical selection tool.
3. Drag on canvas, observe ellipse as you drag, observe result.

OBSERVED RESULT
The preview constantly jumps and the final result often doesn't match.

EXPECTED RESULT
The preview should be fully accurate with a matching result.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian sid
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.90.0
Qt Version: 5.12.12 (appimage)
Comment 1 tomtomtomreportingin 2022-04-18 16:27:44 UTC
Since this issue starts occurring as of Krita 5.0, marking this is a regression.
Comment 2 Lynx3d 2022-04-28 14:55:45 UTC
*** Bug 453130 has been marked as a duplicate of this bug. ***
Comment 3 tomtomtomreportingin 2022-04-30 17:11:09 UTC
The duplicate report was previously set to confirmed, so setting this report to confirmed.
Comment 4 Dmitry Kazakov 2022-06-17 14:43:37 UTC
The problem in the implementation of m_moveCenter functionality, which doesn't work well with rounding of the corners
Comment 5 Dmitry Kazakov 2022-06-17 14:49:55 UTC
Git commit 4f0137a120cb6cfdfaba19a3ea7d12537a1c32a4 by Dmitry Kazakov.
Committed on 17/06/2022 at 14:49.
Pushed by dkazakov into branch 'master'.

Fix dizzy outline in rectangle and ellipse tools

We don't have to apply `m_dragCenter` offset after adjusting
the rectangle endpoints.

M  +1    -7    libs/ui/tool/kis_tool_rectangle_base.cpp

https://invent.kde.org/graphics/krita/commit/4f0137a120cb6cfdfaba19a3ea7d12537a1c32a4
Comment 6 Dmitry Kazakov 2022-06-17 14:50:17 UTC
Git commit 82766ef025ded4b3345a67eed57bf0370980530f by Dmitry Kazakov.
Committed on 17/06/2022 at 14:50.
Pushed by dkazakov into branch 'krita/5.1'.

Fix dizzy outline in rectangle and ellipse tools

We don't have to apply `m_dragCenter` offset after adjusting
the rectangle endpoints.

M  +1    -7    libs/ui/tool/kis_tool_rectangle_base.cpp

https://invent.kde.org/graphics/krita/commit/82766ef025ded4b3345a67eed57bf0370980530f
Comment 7 Xu Che 2022-06-21 12:12:31 UTC
Git commit 35e3e31afc3e0f879103a43ff8c6c57caa9c3fa8 by Xu Che, on behalf of Dmitry Kazakov.
Committed on 21/06/2022 at 08:02.
Pushed by shidao into branch 'xuche/T15555-pixel-perfect-ellipse-gsoc-2022'.

Fix dizzy outline in rectangle and ellipse tools

We don't have to apply `m_dragCenter` offset after adjusting
the rectangle endpoints.

M  +1    -7    libs/ui/tool/kis_tool_rectangle_base.cpp

https://invent.kde.org/graphics/krita/commit/35e3e31afc3e0f879103a43ff8c6c57caa9c3fa8