Fix dizzy outline in rectangle and ellipse tools

We don't have to apply `m_dragCenter` offset after adjusting
the rectangle endpoints.

BUG:452739